--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,38 @@
-body {
+/* ./src/index.css */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+@font-face {
+  font-family: 'Graphik Regular';
+  src: url('./fonts/Graphik/Graphik-Regular.eot');
+  src: url('./fonts/Graphik/Graphik-Regular.eot?#iefix') format('embedded-opentype'),
+    url('./fonts/Graphik/Graphik-Regular.woff2') format('woff2'),
+    url('./fonts/Graphik/Graphik-Regular.woff') format('woff'),
+    url('./fonts/Graphik/Graphik-Regular.ttf') format('truetype'),
+    url('./fonts/Graphik/Graphik-Regular.svg#Graphik-Regular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Graphik Medium';
+  src: url('./fonts/Graphik/Graphik-Medium.eot');
+  src: url('./fonts/Graphik/Graphik-Medium.eot?#iefix') format('embedded-opentype'),
+    url('./fonts/Graphik/Graphik-Medium.woff2') format('woff2'),
+    url('./fonts/Graphik/Graphik-Medium.woff') format('woff'),
+    url('./fonts/Graphik/Graphik-Medium.ttf') format('truetype'),
+    url('./fonts/Graphik/Graphik-Medium.svg#Graphik-Medium') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +44,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
